# school

./: .gitignore  README.md  a.out
DIMACULANGAN_Activity1/: DIMACULANGAN_Activity1.html  nextpage.html
DIMACULANGAN_Activity2/: DIMACULANGAN_Activity2.html  about.html
DIMACULANGAN_Activity3/: DIMACULANGAN_Activity3.html
DIMACULANGAN_Activity4/: DIMACULANGAN_Activity4.html  index.html  style.css
Dimaculangan_Hands-On-Activity-1/: style.css
aicg-tuts/: a.out  comp.cpp
comprog/: VS_structs_unions_enums.c  a.out  image.cpp  image.cpp.bak  recursion examples.cpp  rpn.cpp  vectorstrings.cpp
comprog/LabExercise_03/: DIMACULANGAN_LabExercise3.cpp
comprog/LabExercise_05/: DIMACULANGAN_LabExercise_5.cpp
comprog/LabExercise_11/: DIMACULANGAN_LabExercise_11.cpp
comprog/LabExercise_12/: a.out
comprog/LabExercise_13/: DIMACULANGAN_LabExercise_12.cpp  a.out
comprog/LabExercise_4/: a.out
comprog/LabExercise_6/: DIMACULANGAN_LabExercise_6.cpp  a.out
comprog/LabExercise_7/: DIMACULANGAN_LabExercise_7.cpp
comprog/LabExercise_8/: a.out  (+1 more)
comprog1/: DIMACULANGAN_LabExercise_1.cpp
comprog2/: DIMACULANGAN_LabExercise2.cpp  a.out
comprog4/: DIMACULANGAN_LabExercise_4.cpp
comprog5/: a.out
cpp_demos/: demo0  demo0.cpp
examples/: 4 functions.cpp  5.1 oop-abstraction.cpp  BONUS_1_Pointers.cpp
webprog/: Dimaculangan_togglecolor.html
webprog/awe_proto/: '  Cargo.toml  askama.toml
webprog/awe_proto/htm/: article.html  fp-article.html  master.html
webprog/awe_proto/migrations/: 0001_posts.sql
webprog/awe_proto/src/: main.rs  ssr.rs
y1/: purcomthing.md
(+94 files in other folders)
