[package]
name = "awe_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1", features = ["serde_derive"] }
askama = "0.12" #{ version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
